--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
       <header>
         <img id="logo" src="images/logo.svg" alt="Designtralised logo">
       </header>
-      <h1>Connecting designers working on decentralised products.</h1>
-      <p>Designers creating decentralized products face a new and unique set of challenges. Blockchain technology is not in a place for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
-      <button>Request to Join</button>
-
-
-
+      <h1>A community of designers working on decentralised products.</h1>
+      <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
+      <button>Request an Invite</button>
     </body>
 
 </html>
