--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <body>
       <header>
@@ -22,6 +23,7 @@
       <h1>A community of designers working on decentralised products.</h1>
       <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
       <button>Request an Invite</button>
+      <footer></footer>
     </body>
 
 </html>
