--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description" content="A growing group of designers working in decentrlised fields">
-  <meta name="author" content="Conservatives in Tech">
+  <meta name="author" content="Designtralised">
 
   <meta property="og:url"                content="http://www.designtralised.com" />
   <meta property="og:type"               content="article" />
@@ -13,7 +13,7 @@
   <meta property="og:image"              content="images/designtralised-share.png" />
 
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
 
     <body>
       <header>
@@ -22,7 +22,9 @@
       <h1>Connecting designers working on decentralised products.</h1>
       <p>Designers creating decentralized products face a new and unique set of challenges. Blockchain technology is not in a place for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
       <button>Request to Join</button>
-      
+
+
+
     </body>
 
 </html>
