--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
   <meta property="og:image"              content="images/designtralised-share.png" />
 
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik" 300,400,500,700,900 rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 
-    <body>
+    <body  class="animated fadeIn">
       <header>
-        <img id="logo" src="images/logo.svg" alt="Designtralised logo">
+        <a href="index.html"><img class="animated pulse" id="logo" src="images/logo.svg" alt="Designtralised logo; a capitol letter D comprised of intersecting lines that abstractly represent breaking apart a centralized object and giving it order"></a>
+        <nav>
+          <ul class="list">
+            <li><a>About</a></li>
+            <li><a href="mailto:designtralised@gmail.com">Contact</a></li>
+            <li id="share">Share</a></li>
+          </ul>
+        <nav>
       </header>
-      <h1>A community of designers working on decentralised products.</h1>
+      <h1>A community of designers working to better decentralised products.</h1>
+      <h4>Giving order to disorder.</h4>
       <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
-      <button>Request an Invite</button>
+      <button><a class="btn-inner__text" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a></button>
+
       <footer></footer>
     </body>
 
