--- a/about.html
+++ b/about.html
@@ -30,10 +30,8 @@
         <nav>
       </header>
 
-      <h1>A community of designers working to better decentralised products.</h1>
-      <h4>Giving order to disorder.</h4>
-      <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
-      <button><a class="btn-inner__text" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a></button>
+      <h2>About</h2>
+      <p>Designtralized is brought to you by Greg Christian and Jed Bridges.</P>
 
       <footer></footer>
 
