--- a/about.html
+++ b/about.html
@@ -24,8 +24,7 @@
           <ul class="list">
             <li><a href="index.html" title="Home">Home</a></li>
             <li><a href="about.html" title="About">About</a></li>
-            <li><a href="mailto:designtralised@gmail.com">Email</a></li>
-            <li id="share">Share</a></li>
+            <li><a href="mailto:designtralised@protonmail.com">Email</a></li>
           </ul>
         <nav>
       </header>
