--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           <ul class="list">
             <li><a href="index.html" title="Home">Home</a></li>
             <li><a href="about.html" title="About">About</a></li>
-            <li><a href="mailto:designtralised@gmail.com">Email</a></li>
-            <li id="share">Share</a></li>
+            <li><a href="mailto:designtralised@protonmail.com">Email</a></li>
           </ul>
         <nav>
       </header>
@@ -33,7 +32,7 @@
       <h1>A community of designers working to better decentralised products.</h1>
       <h4>Giving order to disorder.</h4>
       <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
-      <button><a class="btn-inner__text" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a></button>
+      <a class="button" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a>
 
       <footer></footer>
 
