--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
       <a class="button" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a>
 
-      <footer></footer>
+      <footer>
+        <p</p>
+      </footer>
 
     </body>
 
