--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
       </header>
 
       <h1>A community of designers working to better decentralised products.</h1>
-      <h4>Giving order to disorder.</h4>
-      <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you are a designer wanting to connect with other designers in this space, join in now.</P>
+      <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you're a designer wanting to connect with people in this space, join now.</P>
       <a class="button" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a>
 
       <footer>
