--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <title>Designtralised</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <meta name="description" content="A growing group of designers working in decentrlised fields">
-  <meta name="author" content="Conservatives in Tech">
-
+  <meta name="author" content="Designtralized">
   <meta property="og:url"                content="http://www.designtralised.com" />
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="Designtralised" />
@@ -15,7 +13,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik" 300,400,500,700,900 rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-  <script src="particles.js"></script>
+  <link rel="shortcut icon" href="favicon.ico">
 
     <body  class="animated fadeIn">
       <header>
@@ -31,12 +29,11 @@
 
       <h1>A community of designers working to better decentralised products.</h1>
       <p>Decentralized products present a new and unique set of challenges. Blockchain technology in particular is not prepared for mass adoption or wide accessibility. We want to change that. If you're a designer wanting to connect with people in this space, join now.</P>
-      <a class="button" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request an Invite</a>
+      <a class="button" href="https://goo.gl/forms/TVprYl819ZAUtPgC2" target="_blank">Request to Join</a>
+      <img class="homepage" src="images/bkrnd.png" alt="A hand being divided into shapes to represent the need for blockchain technology to be human-friendly.">
 
       <footer>
-        <p</p>
       </footer>
-
     </body>
 
 </html>
