--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:image"              content="images/designtralised-share.png" />
 
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" 300,400,500,700,900 rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark" 400, 500, 600, 700 rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link rel="shortcut icon" href="favicon.ico">
 
