--- a/about.html
+++ b/about.html
@@ -30,7 +30,18 @@
       </header>
 
       <h2>About</h2>
-      <p>Designtralized is brought to you by Greg Christian and Jed Bridges.</P>
+      <p>You’re working on the next decentralized product running on the blockchain. Taking notes from existing financial products which patterns are inherently behind due to the slow moving speed of finance. You have a question about an exchange function or a question on why are we doing things the way they are?
+
+Drop into the Designtralized Slack crew and get the feedback you’re looking for.
+
+We’re connecting designers in the blockhain field since ideas are worth spreading. Web 2.0 was built from open source knowledge and research defining how we interact with browsers and APIs. Let’s start the discussion now and build together as we define how to interact with decentralized products.
+
+Now for some best practices with Designtralized. Please do not discuss proprietary knowledge stemming from your place of work. Do not share screenshots of work ye to be released publicly. Company secrets are just that, secret. We encourage you to access this Slack team from the comfort of your personal device as we expect your company security experts would not be happy with a stream of chats outside of your team roster.
+
+Lastly, be nice. Be respectful. We don’t accept offensive behaviour. If you have to ask, “Is this offensive?” it probably is.
+
+Designtralized is brought to you by Greg Christian and Jed Bridges.
+</P>
 
     </body>
 
