--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <title>Designtralised</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="A growing group of designers working in decentrlised fields">
   <meta name="author" content="Designtralized">
   <meta property="og:url"                content="http://www.designtralised.com" />
